# glyphs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  electron-builder.json5  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
dist-electron/: main.js  preload.mjs
electron/: clipboard-watcher.ts  ipc-handlers.ts  main.ts  preload.ts  store.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard_watcher.rs  commands.rs  lib.rs  main.rs  screenshot_watcher.rs  store.rs
src/components/: kbd.tsx
src/features/clipboard/components/: clipboard-list.tsx  footer.tsx  group-chips.tsx  group-modal.tsx  item-preview.tsx  item-row.tsx  move-category-modal.tsx  qr-modal.tsx  search-bar.tsx  shortcuts-modal.tsx
src/features/clipboard/shortcuts/: use-shortcuts.ts
src/features/settings/components/: setting-row.tsx  settings-page.tsx  shortcut-recorder.tsx
src/store/: use-clipboard-store.ts
