[package]
name = "glyphs"
version = "0.1.0"
description = "A fast, keyboard-first clipboard manager for macOS, Windows, and Linux."
authors = ["Glyph Contributors"]
license = "MIT"
repository = "https://github.com/devoctane/glyphs"
homepage = "https://github.com/devoctane/glyphs#readme"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "glyphs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-autostart = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2"

# Clipboard watching (native events on Windows, changeCount on macOS/Linux)
clipboard-master = "3"
# Cross-platform clipboard read/write
arboard = "3"
# Cross-platform key simulation for paste
enigo = { version = "0.2", features = [] }
# UUID generation
uuid = { version = "1", features = ["v4"] }
image = "0.25.6"
png = "0.18.1"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.7.1"
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
